# metadef

./: CMakeLists.txt  README.en.md  README.md  build.sh
cmake/: intf_pub_linux.cmake
cmake/external_libs/: gflags.cmake  json.cmake  protobuf_shared.cmake  protobuf_static.cmake  protoc.cmake  securec.cmake
graph/: CMakeLists.txt  anchor.cc  ascend_string.cc  attr_value.cc  compute_graph.cc  format_refiner.cc  ge_attr_define.cc  ge_attr_value.cc  ge_tensor.cc  gnode.cc  graph.cc  graph.mk  inference_context.cc  model.cc  model_serialize.cc  node.cc  op_desc.cc  operator.cc  operator_factory.cc  operator_factory_impl.cc  ref_relation.cc  runtime_inference_context.cc  shape_refiner.cc  tensor.cc
graph/debug/: ge_log.h  ge_op_types.h  ge_util.h  graph_debug.cc
graph/opsproto/: opsproto_manager.cc
graph/option/: ge_context.cc  ge_local_context.cc
graph/proto/: fusion_model.proto  ge_api.proto  ge_onnx.proto  proto_common.mk
graph/stub/: gen_stubapi.py
graph/utils/: ge_ir_utils.cc  ge_ir_utils.h  graph_utils.cc  node_utils.cc  op_desc_utils.cc  tensor_utils.cc  transformer_utils.cc  transformer_utils.h  tuning_utils.cc  type_utils.cc
inc/common/: dynamic_aipp.h  npu_error_define.h
inc/common/opskernel/: ge_task_info.h  ops_kernel_builder.h  ops_kernel_info_store.h  ops_kernel_info_types.h
inc/common/optimizer/: graph_optimizer.h
inc/common/util/ai_core/aicore_manager/: aicore_util_manager.h
inc/common/util/ai_core/common/: aicore_util_attr_define.h  aicore_util_constants.h  aicore_util_types.h  l2_stream_info.h  scope_allocator.h
inc/common/util/error_manager/: error_manager.h
inc/graph/: anchor.h  attr_value_serializable.h  compiler_options.h  compute_graph.h  def_types.h  ge_attr_value.h  ge_context.h  ge_local_context.h  ge_tensor.h  model.h  node.h  op_desc.h  operator_factory_impl.h  ref_relation.h  runtime_inference_context.h  tuning_utils.h  usr_types.h
inc/graph/debug/: ge_attr_define.h
inc/graph/detail/: any_map.h  attributes_holder.h  model_serialize_imp.h
inc/graph/utils/: attr_utils.h  graph_utils.h  node_utils.h  op_desc_utils.h
inc/register/: op_registry.h  op_tiling registry.h  op_tiling.h  op_tiling_registry.h
inc/register/graph_optimizer/buffer_fusion/: buffer_fusion_constant.h
inc/register/graph_optimizer/fusion_common/: fusion_statistic_recorder.h  graph_pass_util.h  pattern_fusion_base_pass.h
inc/register/graph_optimizer/graph_fusion/: graph_fusion_pass_base.h
ops/: op_imp.cc  op_imp.cpp
register/: CMakeLists.txt  auto_mapping_util.cpp  auto_mapping_util.h  module.mk  op_tiling registry.cpp  op_tiling.cpp  op_tiling_registry.cpp  ops_kernel_builder_registry.cc  register.cpp  tensor_assign.cpp
register/graph_optimizer/buffer_fusion/: buffer_fusion_pass_base.cpp  buffer_fusion_pass_registry.cpp  buffer_fusion_pattern.cpp
register/graph_optimizer/fusion_statistic/: fusion_statistic_recorder.cpp
register/graph_optimizer/graph_fusion/: fusion_pass_registry.cpp  fusion_pattern.cpp  graph_fusion_pass_base.cpp  pattern_fusion_base_pass.cpp  pattern_fusion_base_pass_impl.cpp  pattern_fusion_base_pass_impl.h
register/scope/: scope_graph.cc  scope_pattern.cc
